--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -49,6 +49,15 @@
         android:layout_gravity="center"
         android:layout_marginTop="50dp"/>
 
+    <TextView
+        android:id="@+id/number_attempts_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:layout_gravity="center|bottom"
+        android:layout_marginBottom="20dp"
+        tools:text="Сжульничать можно ещу 2 раз(а)"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
